# Neural-Driven-Constructive-Heuristic-for-FJSP-with-operation-types

./: CITATION.cff  CMakeLists.txt  README.md
include/: BlackBoxEvaluatorConcept.h  ClusteringConstructionHeuristic.h  ConstructionHeuristicConcept.h  DataConcept.h  DataExport.h  DataSetEvaluator.h  Enums.h  Err.h  FFN.h  Generator.h  JobshopConstructionHeuristic.h  JobshopData.h  JobshopDrawer.h  ParallelDataSetEvaluator.h  ParallelEvaluator.h  ReadConfig.h  Testing.h  chof.h  io.h  learn.h  options.h  utils.h
src/: DataExport.cpp  FFN.cpp  Generator.cpp  JobshopDrawer.cpp  io.cpp  main.cpp  options.cpp  utils.cpp
test_data/n(12-18)_m(10)_k_j(10-15)_t(15)_flex(2-3)/: 000000.fjs  000001.fjs  000002.fjs  000003.fjs  000004.fjs  000005.fjs  000006.fjs  000007.fjs  000008.fjs  000009.fjs
test_data/n(12-18)_m(10)_k_j(10-15)_t(15)_flex(2-5)/: 000000.fjs  000001.fjs  000002.fjs  000003.fjs  000004.fjs  000005.fjs  000006.fjs  000007.fjs  000008.fjs  000009.fjs
test_data/n(12-18)_m(10)_k_j(10-15)_t(30)_flex(2-3)/: 000000.fjs  000001.fjs  000002.fjs  000003.fjs  000004.fjs  000005.fjs  000006.fjs  000007.fjs  000008.fjs  000009.fjs
test_data/n(12-18)_m(10)_k_j(10-15)_t(30)_flex(2-5)/: 000000.fjs  000001.fjs  000002.fjs  000003.fjs  000004.fjs  000005.fjs  000006.fjs  000007.fjs  000008.fjs  000009.fjs
test_data/n(12-18)_m(10)_k_j(5-10)_t(15)_flex(2-3)/: 000000.fjs  000001.fjs  000002.fjs  000003.fjs  000004.fjs  000005.fjs  000006.fjs  000007.fjs  000008.fjs  000009.fjs
test_data/n(12-18)_m(10)_k_j(5-10)_t(15)_flex(2-5)/: 000000.fjs  000001.fjs  000002.fjs  000003.fjs  000004.fjs  000005.fjs  000006.fjs  000007.fjs  000008.fjs  000009.fjs
test_data/n(12-18)_m(10)_k_j(5-10)_t(30)_flex(2-3)/: 000000.fjs  000001.fjs  000002.fjs  000003.fjs  000004.fjs  000005.fjs  000006.fjs  000007.fjs  000008.fjs  000009.fjs
test_data/n(12-18)_m(10)_k_j(5-10)_t(30)_flex(2-5)/: 000000.fjs  000001.fjs  000002.fjs  000003.fjs  000004.fjs  000005.fjs  000006.fjs  000007.fjs  000008.fjs  000009.fjs
test_data/n(16-24)_m(10)_k_j(10-15)_t(15)_flex(2-3)/: 000000.fjs  000001.fjs  000002.fjs  000003.fjs  000004.fjs  000005.fjs  000006.fjs  000007.fjs  000008.fjs  000009.fjs
test_data/n(16-24)_m(10)_k_j(10-15)_t(15)_flex(2-5)/: 000000.fjs  000001.fjs  000002.fjs  000003.fjs  000004.fjs  000005.fjs  000006.fjs  000007.fjs  000008.fjs  000009.fjs
test_data/n(16-24)_m(10)_k_j(10-15)_t(30)_flex(2-3)/: 000000.fjs  000001.fjs  000002.fjs  000003.fjs  000004.fjs  000005.fjs  000006.fjs  000007.fjs  000008.fjs  000009.fjs
test_data/n(16-24)_m(10)_k_j(10-15)_t(30)_flex(2-5)/: 000000.fjs  000001.fjs  000002.fjs  000003.fjs  000004.fjs  000005.fjs  000006.fjs  000007.fjs  000008.fjs  000009.fjs
test_data/n(16-24)_m(10)_k_j(5-10)_t(15)_flex(2-3)/: 000000.fjs  000001.fjs  000002.fjs  000003.fjs  000004.fjs  000005.fjs  000006.fjs  000007.fjs  000008.fjs  000009.fjs
test_data/n(16-24)_m(10)_k_j(5-10)_t(15)_flex(2-5)/: 000000.fjs  000001.fjs  000002.fjs  000003.fjs  000004.fjs  000005.fjs  000006.fjs  000007.fjs  000008.fjs  000009.fjs
test_data/n(16-24)_m(10)_k_j(5-10)_t(30)_flex(2-3)/: 000000.fjs  000001.fjs  000002.fjs  000003.fjs  000004.fjs  000005.fjs  000006.fjs  000007.fjs  000008.fjs  000009.fjs
test_data/n(16-24)_m(10)_k_j(5-10)_t(30)_flex(2-5)/: 000000.fjs  000001.fjs  000002.fjs  000003.fjs  000004.fjs  000005.fjs  000006.fjs  000007.fjs  000008.fjs  000009.fjs
test_data/n(24-36)_m(10)_k_j(10-15)_t(15)_flex(2-3)/: 000000.fjs  000001.fjs  000002.fjs  000003.fjs  000004.fjs  000005.fjs  000006.fjs  000007.fjs  000008.fjs  000009.fjs
test_data/n(24-36)_m(10)_k_j(10-15)_t(15)_flex(2-5)/: 000000.fjs  000001.fjs  000002.fjs  000003.fjs  000004.fjs  000005.fjs  000006.fjs  000007.fjs  000008.fjs  000009.fjs
test_data/n(24-36)_m(10)_k_j(10-15)_t(30)_flex(2-3)/: 000000.fjs  000001.fjs  000002.fjs  000003.fjs  000004.fjs  (+5 more)
(+210 files in other folders)
